# sliimp

./: .gitignore  .gitmodules  README.md  project.clj  update.sh
bench/: tests.txt
bench/jsplatexr/: Film.java  Pixel.java  SplatExr.java  compile  run
bench/splatexr/: CMakeLists.txt  results.txt  splatexr.cpp
doc/: intro.md
doc/demo/: demo-film.clj
doc/demo-out/: demo-image-process263.exr  demo-image-process798.exr  demo-splat485-final.exr
src/sliimp/: core.clj  film.clj  filter.clj  jimp.clj  sampler.clj
test/sliimp/: core_test.clj
